--- a/test/test2.html
+++ b/test/test2.html
@@ -9,63 +9,11 @@
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.3.0/build/base/base-min.css">
 		<style type="text/css" media="screen">
 			body { margin: 2em; }
-			#anim { position: fixed; top: 0; right: 0; width: 100px; height: 100px; background-color: #000; }
-			* html #anim { position: absolute; }
 		</style>
 		<script type="text/javascript" src="jquery.js"></script>
 		<script src="../jquery.livequery.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(function() {
-				var anim = (function() {
-					var el = $('#anim');
-					return function() {
-						el.toggle(1000, anim);
-					};
-				})();
-				anim();
-				
-				/*** Example 1-1 ***/
-				var example1_1 = function() {
-					$(this)
-						.text('Clicked')
-						.blur();
-					return false;
-				};
-				$('input[name=example1-1-add]')
-					.bind('click', function() {
-						$('ul#example1-1')
-							.append('<li><a href="#listitem">List Item</a></li>');
-						this.blur();
-					});
-				$('input[name=example1-1-expire]')
-					.bind('click', function() {
-						$('body #example1-1 a')
-							.expire('click');
-						this.blur();
-						this.disabled = true;
-						$('input[name=example1-1-restart]').attr('disabled', false);
-					});
-				$('input[name=example1-1-restart]')
-					.bind('click', function() {
-						$('body #example1-1 a')
-							.livequery('click', function() {
-								$(this)
-									.text('Clicked')
-									.blur();
-								return false;
-							});
-						$('input[name=example1-1-expire]')[0].disabled = false;
-						$('input[name=example1-1-restart]').attr('disabled', true).blur();
-					});
-				$('#example1-1', 'body')
-					.find('a')
-						.livequery('click', function() {
-							$(this)
-								.text('Clicked')
-								.blur();
-							return false;
-						});
-				
 				/*** Example 1-2 ***/
 				var matched = function() {
 					$(this)
@@ -117,27 +65,8 @@
 	<body>
 		<div id="anim"></div>
 		<h1>Live Query: Unordered List Examples (Using Anonymous Functions)</h1>
-		<p>A common use-case is when a new list item is added to an unordered list and an event should be bound to it or a script notified of the change.</p>
-		
-		<h2>Binding an event to each list item</h2>
-		<p>The list below uses a live query to bind a click event to each list item that changes the text to read 'Clicked'. Expiring the Live Query unbinds the events.</p>
-<pre><code>$('ul#example1-1', 'body')
-	.find('a')
-		.livequery('click', function() {
-			$(this)
-				.text('Clicked')
-				.blur();
-			return false;
-		});
-</code></pre>
-		<p><input type="button" name="example1-1-add" value="Add New Item"> <input type="button" name="example1-1-expire" value="Expire Live Query"> <input type="button" name="example1-1-restart" disabled="disabled" value="Restart Live Query"><p>
-		<ul id="example1-1">
-			<li><a href="#listitem">List Item</a></li>
-			<li><a href="#listitem">List Item</a></li>
-			<li><a href="#listitem">List Item</a></li>
-			<li><a href="#listitem">List Item</a></li>
-		</ul>
-		
+		<p>A common use-case is when a new list item is added to an unordered list and a script notified of the change.</p>
+
 		<h2>Get notified when a list item is added</h2>
 		<p>The list below uses a Live Query to call a function when a new list item is added. This function adds the following text to each list item: '(Updated)' and removes it when the Live Query is expired.</p>
 <pre><code>var matched = function() {
