--- a/test/test2.html
+++ b/test/test2.html
@@ -11,7 +11,7 @@
 			body { margin: 2em; }
 		</style>
 		<script type="text/javascript" src="jquery.js"></script>
-		<script src="../jquery.livequery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../src/jquery.livequery.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(function() {
 				/*** Example 1-2 ***/
